# FreeCV

./: CMakeLists.txt  DOTO.txt  README.md  testMain.cpp
TestData/: hough.pgm  lena_gray.pgm  lena_rgb.ppm  stereo_left_gray.pgm  stereo_right_gray.pgm
TestData/Aloe/: stereo_left_gray.pgm  stereo_left_rgb.ppm  stereo_right_gray.pgm
TestData/Bowling/: stereo_left_gray.pgm  stereo_right_gray.pgm
TestData/Laundry/: stereo_left_gray.pgm  stereo_left_rgb.ppm  stereo_right_gray.pgm
include/: FreeCV.h  Image.h  ImageFileManager.h  Logger.h  Macros.h  Matrix.h  Vector.h
include/Core/: Logger.h  Macros.h  Matrix.h  Rectangle.h  Vector.h
include/FreeCV/: FreeCV.h
include/FreeCV/Core/: Logger.h  Macros.h  Math.h  Matrix.h  Rectangle.h  StopWatch.h  Vector.h
include/FreeCV/Cuda/: Cuda.h  CudaError.h  GPUData.h
include/FreeCV/IO/: ExposureController.h  VideoCapture.h
include/FreeCV/Image/: ColorConvert.h  Filter.h  Histogram.h  Image.h  ImageFileManager.h  Transform.h
include/FreeCV/Interfaces/: QtInterface.h
include/FreeCV/Linux/: ExposureController.h  VideoCapture.h
include/FreeCV/Neuro/: IMLPTransfer.h  MLPRProp.h  MLPTransferTanh.h
include/FreeCV/Stereo/: CalibLoader.h  PointCloudCreator.h  SGM.h  UndistortAndRectify.h
include/FreeCV/Windows/: Time.h  Times.h
include/Geometry/: Rectangle.h
include/IO/: VideoCapture.h
include/Image/: ColorConvert.h  Filter.h  Histogram.h  Image.h  ImageFileManager.h  Transform.h
include/Stereo/: SGM.h
src/: CalibLoader.cpp  ColorConvert.cpp  ExposureController.cpp  Filter.cpp  GPUData.cpp  Histogram.cpp  Image.cpp  ImageFileManager.cpp  Logger.cpp  MLPRProp.cpp  Math.cpp  Matrix.cpp  PointCloudCreator.cpp  QtInterface.cpp  Rectangle.cpp  SGM.cpp  Times.cpp  Transform.cpp  UndistortAndRectify.cpp  Vector.cpp  VideoCapture.cpp  testMain.cpp
